tests/compile-fail/fn_no_args.rs
#[macro_use] extern crate bevy_fn_plugin;

#[bevy_plugin]
fn no_arg_fn() {}

fn main() {}
