tests/compile-fail/fn_no_args.stderr
error: Invalid plugin function signature
 --> tests/compile-fail/fn_no_args.rs:4:1
  |
4 | fn no_arg_fn() {}
  | ^^^^^^^^^^^^^^
  |
  = help: Function should take a single argument of the type `&mut bevy::app::App`
